Restructuring for #665 and #681 Further removed using statements and enabled the bytecode parsing for string expressions (experimentally).
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_665_681@1121 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -22,9 +22,9 @@
 				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-Wall" />
+					<Add option="-std=gnu++2a" />
 					<Add option="-Og" />
 					<Add option="-g" />
-					<Add option="-std=gnu++11" />
 					<Add option="-mthreads" />
 					<Add option="-DDLLVER_MAJOR_MASK" />
 					<Add option="-DwxUSE_REGEX" />
@@ -79,7 +79,7 @@
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-Wall" />
-					<Add option="-std=gnu++11" />
+					<Add option="-std=gnu++2a" />
 					<Add option="-fopenmp" />
 					<Add option="-mthreads" />
 					<Add option="-DDLLVER_MAJOR_MASK" />
@@ -188,7 +188,7 @@
 				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-Wall" />
-					<Add option="-std=gnu++11" />
+					<Add option="-std=gnu++2a" />
 					<Add option="-g" />
 					<Add option="-mthreads" />
 					<Add option="-ggdb3" />
