Restructuring for #665 and #681 Re-enabled vector expansions
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_665_681@1126 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -407,6 +407,8 @@
 		<Unit filename="kernel/core/ParserLib/muParserError.h" />
 		<Unit filename="kernel/core/ParserLib/muParserFixes.h" />
 		<Unit filename="kernel/core/ParserLib/muParserStack.h" />
+		<Unit filename="kernel/core/ParserLib/muParserState.cpp" />
+		<Unit filename="kernel/core/ParserLib/muParserState.hpp" />
 		<Unit filename="kernel/core/ParserLib/muParserTemplateMagic.h" />
 		<Unit filename="kernel/core/ParserLib/muParserToken.h" />
 		<Unit filename="kernel/core/ParserLib/muParserTokenReader.cpp" />
