Created branch for tickets #647, #433, #434 Replaced wxNotebook with wxAuiNotebook in most places
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_674@1139 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -51,6 +51,7 @@
 					<Add library="wxexpat" />
 					<Add library="wxbase30u_xml" />
 					<Add library="wxbase30u_net" />
+					<Add library="wxmsw30u_aui" />
 					<Add library="wxmsw30u_core" />
 					<Add library="wxbase30u" />
 					<Add library="wxregexu" />
@@ -107,6 +108,7 @@
 					<Add library="wxexpat" />
 					<Add library="wxbase30u_xml" />
 					<Add library="wxbase30u_net" />
+					<Add library="wxmsw30u_aui" />
 					<Add library="wxmsw30u_core" />
 					<Add library="wxbase30u" />
 					<Add library="wxregexu" />
@@ -161,6 +163,7 @@
 					<Add library="wxexpat" />
 					<Add library="wxbase30u_xml" />
 					<Add library="wxbase30u_net" />
+					<Add library="wxmsw30u_aui" />
 					<Add library="wxmsw30u_core" />
 					<Add library="wxbase30u" />
 					<Add library="wxregexu" />
@@ -218,6 +221,7 @@
 					<Add library="wxexpat" />
 					<Add library="wxbase30u_xml" />
 					<Add library="wxbase30u_net" />
+					<Add library="wxmsw30u_aui" />
 					<Add library="wxmsw30u_core" />
 					<Add library="wxbase30u" />
 					<Add library="wxregexu" />
