Intermediate commit for #714
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_714@1168 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -535,6 +535,7 @@
 		<Unit filename="kernel/core/script.hpp" />
 		<Unit filename="kernel/core/settings.cpp" />
 		<Unit filename="kernel/core/settings.hpp" />
+		<Unit filename="kernel/core/strings/stringdatastructures.cpp" />
 		<Unit filename="kernel/core/strings/stringdatastructures.hpp" />
 		<Unit filename="kernel/core/strings/stringexpression.hpp" />
 		<Unit filename="kernel/core/strings/stringfunchandler.cpp" />
