--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -329,6 +329,7 @@
 		<Unit filename="gui/controls/searchctrl.hpp" />
 		<Unit filename="gui/controls/toolbarsearchctrl.cpp" />
 		<Unit filename="gui/controls/toolbarsearchctrl.hpp" />
+		<Unit filename="gui/controls/treedata.hpp" />
 		<Unit filename="gui/controls/treelistctrl.cpp" />
 		<Unit filename="gui/controls/treelistctrl.h" />
 		<Unit filename="gui/controls/treesearchctrl.cpp" />
