Implemented ticket #730 "Add checksums to NDAT und numere.cache"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1242 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -252,6 +252,7 @@
 			<Add option="-lgsl" />
 			<Add option="-lnoise" />
 			<Add option="-lcurl" />
+			<Add option="-lsha" />
 			<Add option="-lgslcblas" />
 			<Add option="-Wl,--stack,8388608" />
 			<Add option="-fopenmp" />
