Implemented ticket #742 "Support ZYGO dat files"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1247 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -253,6 +253,7 @@
 			<Add option="-lnoise" />
 			<Add option="-lcurl" />
 			<Add option="-lsha" />
+			<Add option="-lzygo" />
 			<Add option="-lgslcblas" />
 			<Add option="-Wl,--stack,8388608" />
 			<Add option="-fopenmp" />
