Implemented ticket #718 "Enable Diffs for two different files"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1252 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -263,6 +263,8 @@
 		</Unit>
 		<Unit filename="common/CommonHeaders.h" />
 		<Unit filename="common/Options.h" />
+		<Unit filename="common/compareFiles.cpp" />
+		<Unit filename="common/compareFiles.hpp" />
 		<Unit filename="common/datastructures.h" />
 		<Unit filename="common/dtl/Diff.hpp" />
 		<Unit filename="common/dtl/Diff3.hpp" />
