Improved implementation of ticket #702 - Fixed statistics issue with selecting individual cells - Simplified the handling of selected cells
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_702@1257 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -304,6 +304,7 @@
 		<Unit filename="gui/compositions/debugviewer.hpp" />
 		<Unit filename="gui/compositions/filetree.cpp" />
 		<Unit filename="gui/compositions/filetree.hpp" />
+		<Unit filename="gui/compositions/gridcellcoordscontainer.hpp" />
 		<Unit filename="gui/compositions/gridtable.cpp" />
 		<Unit filename="gui/compositions/gridtable.hpp" />
 		<Unit filename="gui/compositions/grouppanel.cpp" />
