Implemented ticket #738 "'read' should optionally consider quotation marks"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1269 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -567,6 +567,7 @@
 		<Unit filename="kernel/core/utils/BasicExcel.cpp" />
 		<Unit filename="kernel/core/utils/BasicExcel.hpp" />
 		<Unit filename="kernel/core/utils/date/date.h" />
+		<Unit filename="kernel/core/utils/date/iso_week.h" />
 		<Unit filename="kernel/core/utils/datetimetools.cpp" />
 		<Unit filename="kernel/core/utils/datetimetools.hpp" />
 		<Unit filename="kernel/core/utils/fast_float/ascii_number.h" />
