Implemented ticket #746 "Table viewer optimisations"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1271 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -297,6 +297,7 @@
 		<Unit filename="gui/NumeReStatusbar.hpp" />
 		<Unit filename="gui/NumeReWindow.cpp" />
 		<Unit filename="gui/NumeReWindow.h" />
+		<Unit filename="gui/compositions/cellattributes.hpp" />
 		<Unit filename="gui/compositions/cellvalueshader.hpp" />
 		<Unit filename="gui/compositions/customwindow.cpp" />
 		<Unit filename="gui/compositions/customwindow.hpp" />
