Created branch for ticket #650
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_650@1308 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -567,6 +567,8 @@
 		<Unit filename="kernel/core/ui/winlayout.hpp" />
 		<Unit filename="kernel/core/utils/BasicExcel.cpp" />
 		<Unit filename="kernel/core/utils/BasicExcel.hpp" />
+		<Unit filename="kernel/core/utils/archive.cpp" />
+		<Unit filename="kernel/core/utils/archive.hpp" />
 		<Unit filename="kernel/core/utils/date/date.h" />
 		<Unit filename="kernel/core/utils/date/iso_week.h" />
 		<Unit filename="kernel/core/utils/datetimetools.cpp" />
