--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -350,6 +350,8 @@
 		<Unit filename="gui/dialogs/duplicatecodedialog.hpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.cpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
+		<Unit filename="gui/dialogs/newfiledialog.cpp" />
+		<Unit filename="gui/dialogs/newfiledialog.hpp" />
 		<Unit filename="gui/dialogs/packagedialog.cpp" />
 		<Unit filename="gui/dialogs/packagedialog.hpp" />
 		<Unit filename="gui/dialogs/pluginrepodialog.cpp" />
