Implemented ticket #789 "Extend GUI system"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1346 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -350,6 +350,8 @@
 		<Unit filename="gui/dialogs/duplicatecodedialog.hpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.cpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
+		<Unit filename="gui/dialogs/listeditdialog.cpp" />
+		<Unit filename="gui/dialogs/listeditdialog.hpp" />
 		<Unit filename="gui/dialogs/newfiledialog.cpp" />
 		<Unit filename="gui/dialogs/newfiledialog.hpp" />
 		<Unit filename="gui/dialogs/packagedialog.cpp" />
