--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -72,7 +72,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="../../Software/rc/NumeRe/numere" prefix_auto="1" extension_auto="1" />
+				<Option output="../Software/rc/NumeRe/numere" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Release" />
 				<Option type="0" />
 				<Option compiler="tdm-gcc" />
