Converted tinyxml2, chrono::date and dtl to submodules

--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -265,14 +265,6 @@
 		<Unit filename="common/compareFiles.cpp" />
 		<Unit filename="common/compareFiles.hpp" />
 		<Unit filename="common/datastructures.h" />
-		<Unit filename="common/dtl/Diff.hpp" />
-		<Unit filename="common/dtl/Diff3.hpp" />
-		<Unit filename="common/dtl/Lcs.hpp" />
-		<Unit filename="common/dtl/Sequence.hpp" />
-		<Unit filename="common/dtl/Ses.hpp" />
-		<Unit filename="common/dtl/dtl.hpp" />
-		<Unit filename="common/dtl/functors.hpp" />
-		<Unit filename="common/dtl/variables.hpp" />
 		<Unit filename="common/filerevisions.cpp" />
 		<Unit filename="common/filerevisions.hpp" />
 		<Unit filename="common/filewatcher.cpp" />
@@ -286,6 +278,26 @@
 		<Unit filename="common/recycler.hpp" />
 		<Unit filename="common/vcsmanager.cpp" />
 		<Unit filename="common/vcsmanager.hpp" />
+		<Unit filename="externals/date/include/date/chrono_io.h" />
+		<Unit filename="externals/date/include/date/date.h" />
+		<Unit filename="externals/date/include/date/ios.h" />
+		<Unit filename="externals/date/include/date/islamic.h" />
+		<Unit filename="externals/date/include/date/iso_week.h" />
+		<Unit filename="externals/date/include/date/julian.h" />
+		<Unit filename="externals/date/include/date/ptz.h" />
+		<Unit filename="externals/date/include/date/solar_hijri.h" />
+		<Unit filename="externals/date/include/date/tz.h" />
+		<Unit filename="externals/date/include/date/tz_private.h" />
+		<Unit filename="externals/dtl/dtl/Diff.hpp" />
+		<Unit filename="externals/dtl/dtl/Diff3.hpp" />
+		<Unit filename="externals/dtl/dtl/Lcs.hpp" />
+		<Unit filename="externals/dtl/dtl/Sequence.hpp" />
+		<Unit filename="externals/dtl/dtl/Ses.hpp" />
+		<Unit filename="externals/dtl/dtl/dtl.hpp" />
+		<Unit filename="externals/dtl/dtl/functors.hpp" />
+		<Unit filename="externals/dtl/dtl/variables.hpp" />
+		<Unit filename="externals/tinyxml2/tinyxml2.cpp" />
+		<Unit filename="externals/tinyxml2/tinyxml2.h" />
 		<Unit filename="gui/DirTraverser.cpp" />
 		<Unit filename="gui/DirTraverser.hpp" />
 		<Unit filename="gui/IconManager.cpp" />
@@ -572,19 +584,8 @@
 		<Unit filename="kernel/core/utils/BasicExcel.hpp" />
 		<Unit filename="kernel/core/utils/archive.cpp" />
 		<Unit filename="kernel/core/utils/archive.hpp" />
-		<Unit filename="kernel/core/utils/date/date.h" />
-		<Unit filename="kernel/core/utils/date/iso_week.h" />
 		<Unit filename="kernel/core/utils/datetimetools.cpp" />
 		<Unit filename="kernel/core/utils/datetimetools.hpp" />
-		<Unit filename="kernel/core/utils/fast_float/ascii_number.h" />
-		<Unit filename="kernel/core/utils/fast_float/bigint.h" />
-		<Unit filename="kernel/core/utils/fast_float/decimal_to_binary.h" />
-		<Unit filename="kernel/core/utils/fast_float/digit_comparison.h" />
-		<Unit filename="kernel/core/utils/fast_float/fast_float.h" />
-		<Unit filename="kernel/core/utils/fast_float/fast_table.h" />
-		<Unit filename="kernel/core/utils/fast_float/float_common.h" />
-		<Unit filename="kernel/core/utils/fast_float/parse_number.h" />
-		<Unit filename="kernel/core/utils/fast_float/simple_decimal_conversion.h" />
 		<Unit filename="kernel/core/utils/filecheck.cpp" />
 		<Unit filename="kernel/core/utils/filecheck.hpp" />
 		<Unit filename="kernel/core/utils/stringtools.cpp" />
@@ -594,8 +595,6 @@
 			<Option target="Profiling" />
 			<Option target="Deep Debug" />
 		</Unit>
-		<Unit filename="kernel/core/utils/tinyxml2.cpp" />
-		<Unit filename="kernel/core/utils/tinyxml2.h" />
 		<Unit filename="kernel/core/utils/tools.cpp" />
 		<Unit filename="kernel/core/utils/tools.hpp" />
 		<Unit filename="kernel/core/utils/unzip.cpp" />
