--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -4,7 +4,7 @@
 	<Project>
 		<Option title="NumeRe" />
 		<Option pch_mode="2" />
-		<Option compiler="tdm-gcc" />
+		<Option compiler="gcc" />
 		<MakeCommands>
 			<Build command="" />
 			<CompileFile command="" />
@@ -20,56 +20,15 @@
 				<Option type="0" />
 				<Option compiler="tdm-gcc" />
 				<Compiler>
-					<Add option="-Wall" />
 					<Add option="-Og" />
 					<Add option="-g" />
-					<Add option="-std=gnu++2a" />
-					<Add option="-mthreads" />
-					<Add option="-DDLLVER_MAJOR_MASK" />
-					<Add option="-DwxUSE_REGEX" />
-					<Add option="-DwxDIALOG_MODAL" />
-					<Add option="-DwxUSE_UNICODE" />
 					<Add option="-D__GNUWIN32__" />
-					<Add option="-D__WXMSW__" />
 					<Add option="-DWXDEBUG" />
 					<Add option="-DDO_LOG" />
-					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
-					<Add directory="$(#wx)/include" />
 				</Compiler>
-				<ResourceCompiler>
-					<Add directory="$(#wx)/include/" />
-				</ResourceCompiler>
-				<Linker>
-					<Add library="wxmsw30u_stc" />
-					<Add library="wxscintilla" />
-					<Add library="wxmsw30u_propgrid" />
-					<Add library="wxmsw30u_media" />
-					<Add library="wxmsw30u_adv" />
-					<Add library="wxmsw30u_gl" />
-					<Add library="wxmsw30u_html" />
-					<Add library="wxexpat" />
-					<Add library="wxbase30u_xml" />
-					<Add library="wxbase30u_net" />
-					<Add library="wxmsw30u_aui" />
-					<Add library="wxmsw30u_core" />
-					<Add library="wxbase30u" />
-					<Add library="wxregexu" />
-					<Add library="wxjpeg" />
-					<Add library="wxpng" />
-					<Add library="wxtiff" />
-					<Add library="wxzlib" />
-					<Add library="rpcrt4" />
-					<Add library="winmm" />
-					<Add library="advapi32" />
-					<Add library="version" />
-					<Add library="wsock32" />
-					<Add library="comctl32" />
-					<Add library="ole32" />
-					<Add library="uuid" />
-					<Add library="winspool" />
-					<Add library="oleaut32" />
-					<Add directory="$(#wx)/lib/gcc_lib" />
-				</Linker>
+				<Environment>
+					<Variable name="wx" value="D:\TDM-GCC-32\wxWidgets-3.0.2" />
+				</Environment>
 			</Target>
 			<Target title="Release">
 				<Option output="../Software/rc/NumeRe/numere" prefix_auto="1" extension_auto="1" />
@@ -78,55 +37,16 @@
 				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-O3" />
-					<Add option="-Wall" />
-					<Add option="-std=gnu++2a" />
 					<Add option="-fopenmp" />
-					<Add option="-mthreads" />
-					<Add option="-DDLLVER_MAJOR_MASK" />
-					<Add option="-DwxUSE_REGEX" />
-					<Add option="-DwxDIALOG_MODAL" />
-					<Add option="-DwxUSE_UNICODE" />
 					<Add option="-D__GNUWIN32__" />
-					<Add option="-D__WXMSW__" />
 					<Add option="-DRELEASE" />
-					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
-					<Add directory="$(#wx)/include" />
 				</Compiler>
-				<ResourceCompiler>
-					<Add directory="$(#wx)/include/" />
-				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="wxmsw30u_stc" />
-					<Add library="wxscintilla" />
-					<Add library="wxmsw30u_propgrid" />
-					<Add library="wxmsw30u_media" />
-					<Add library="wxmsw30u_adv" />
-					<Add library="wxmsw30u_gl" />
-					<Add library="wxmsw30u_html" />
-					<Add library="wxexpat" />
-					<Add library="wxbase30u_xml" />
-					<Add library="wxbase30u_net" />
-					<Add library="wxmsw30u_aui" />
-					<Add library="wxmsw30u_core" />
-					<Add library="wxbase30u" />
-					<Add library="wxregexu" />
-					<Add library="wxjpeg" />
-					<Add library="wxpng" />
-					<Add library="wxtiff" />
-					<Add library="wxzlib" />
-					<Add library="rpcrt4" />
-					<Add library="winmm" />
-					<Add library="advapi32" />
-					<Add library="version" />
-					<Add library="wsock32" />
-					<Add library="comctl32" />
-					<Add library="ole32" />
-					<Add library="uuid" />
-					<Add library="winspool" />
-					<Add library="oleaut32" />
-					<Add directory="$(#wx)/lib/gcc_lib" />
 				</Linker>
+				<Environment>
+					<Variable name="wx" value="D:\TDM-GCC-32\wxWidgets-3.0.2" />
+				</Environment>
 			</Target>
 			<Target title="Profiling">
 				<Option output="../../Software/NumeRe/numere" prefix_auto="1" extension_auto="1" />
@@ -135,53 +55,12 @@
 				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-O3" />
-					<Add option="-Wall" />
-					<Add option="-std=gnu++2a" />
-					<Add option="-mthreads" />
 					<Add option="-fopenmp" />
-					<Add option="-DDLLVER_MAJOR_MASK" />
-					<Add option="-DwxUSE_REGEX" />
-					<Add option="-DwxDIALOG_MODAL" />
-					<Add option="-DwxUSE_UNICODE" />
 					<Add option="-D__GNUWIN32__" />
-					<Add option="-D__WXMSW__" />
-					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
-					<Add directory="$(#wx)/include" />
 				</Compiler>
-				<ResourceCompiler>
-					<Add directory="$(#wx)/include/" />
-				</ResourceCompiler>
-				<Linker>
-					<Add library="wxmsw30u_stc" />
-					<Add library="wxscintilla" />
-					<Add library="wxmsw30u_propgrid" />
-					<Add library="wxmsw30u_media" />
-					<Add library="wxmsw30u_adv" />
-					<Add library="wxmsw30u_gl" />
-					<Add library="wxmsw30u_html" />
-					<Add library="wxexpat" />
-					<Add library="wxbase30u_xml" />
-					<Add library="wxbase30u_net" />
-					<Add library="wxmsw30u_aui" />
-					<Add library="wxmsw30u_core" />
-					<Add library="wxbase30u" />
-					<Add library="wxregexu" />
-					<Add library="wxjpeg" />
-					<Add library="wxpng" />
-					<Add library="wxtiff" />
-					<Add library="wxzlib" />
-					<Add library="rpcrt4" />
-					<Add library="winmm" />
-					<Add library="advapi32" />
-					<Add library="version" />
-					<Add library="wsock32" />
-					<Add library="comctl32" />
-					<Add library="ole32" />
-					<Add library="uuid" />
-					<Add library="winspool" />
-					<Add library="oleaut32" />
-					<Add directory="$(#wx)/lib/gcc_lib" />
-				</Linker>
+				<Environment>
+					<Variable name="wx" value="D:\TDM-GCC-32\wxWidgets-3.0.2" />
+				</Environment>
 			</Target>
 			<Target title="Deep Debug">
 				<Option output="../../Software/NumeRe/numere" prefix_auto="1" extension_auto="1" />
@@ -189,63 +68,35 @@
 				<Option type="0" />
 				<Option compiler="tdm-gcc" />
 				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-std=gnu++2a" />
 					<Add option="-g" />
-					<Add option="-mthreads" />
 					<Add option="-ggdb3" />
 					<Add option="-fno-omit-frame-pointer" />
-					<Add option="-DDLLVER_MAJOR_MASK" />
-					<Add option="-DwxUSE_REGEX" />
-					<Add option="-DwxDIALOG_MODAL" />
-					<Add option="-DwxUSE_UNICODE" />
 					<Add option="-D__GNUWIN32__" />
-					<Add option="-D__WXMSW__" />
 					<Add option="-DWXDEBUG" />
 					<Add option="-DDO_LOG" />
-					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
-					<Add directory="$(#wx)/include" />
 				</Compiler>
-				<ResourceCompiler>
-					<Add directory="$(#wx)/include/" />
-				</ResourceCompiler>
-				<Linker>
-					<Add library="wxmsw30u_stc" />
-					<Add library="wxscintilla" />
-					<Add library="wxmsw30u_propgrid" />
-					<Add library="wxmsw30u_media" />
-					<Add library="wxmsw30u_adv" />
-					<Add library="wxmsw30u_gl" />
-					<Add library="wxmsw30u_html" />
-					<Add library="wxexpat" />
-					<Add library="wxbase30u_xml" />
-					<Add library="wxbase30u_net" />
-					<Add library="wxmsw30u_aui" />
-					<Add library="wxmsw30u_core" />
-					<Add library="wxbase30u" />
-					<Add library="wxregexu" />
-					<Add library="wxjpeg" />
-					<Add library="wxpng" />
-					<Add library="wxtiff" />
-					<Add library="wxzlib" />
-					<Add library="rpcrt4" />
-					<Add library="winmm" />
-					<Add library="advapi32" />
-					<Add library="version" />
-					<Add library="wsock32" />
-					<Add library="comctl32" />
-					<Add library="ole32" />
-					<Add library="uuid" />
-					<Add library="winspool" />
-					<Add library="oleaut32" />
-					<Add directory="$(#wx)/lib/gcc_lib" />
-				</Linker>
+				<Environment>
+					<Variable name="wx" value="D:\TDM-GCC-32\wxWidgets-3.0.2" />
+				</Environment>
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Wall" />
+			<Add option="-std=gnu++2a" />
 			<Add option="-Wno-narrowing" />
+			<Add option="-mthreads" />
+			<Add option="-DDLLVER_MAJOR_MASK" />
+			<Add option="-DwxUSE_REGEX" />
+			<Add option="-DwxDIALOG_MODAL" />
+			<Add option="-DwxUSE_UNICODE" />
+			<Add option="-D__WXMSW__" />
 			<Add option="-D__MSVCRT_VERSION__=0x0601" />
+			<Add directory="$(wx)/lib/gcc_lib/mswu" />
+			<Add directory="$(wx)/include" />
 		</Compiler>
+		<ResourceCompiler>
+			<Add directory="$(wx)/include/" />
+		</ResourceCompiler>
 		<Linker>
 			<Add option="-lmgl" />
 			<Add option="-lgsl" />
@@ -256,6 +107,35 @@
 			<Add option="-lgslcblas" />
 			<Add option="-Wl,--stack,8388608" />
 			<Add option="-fopenmp" />
+			<Add library="wxmsw30u_stc" />
+			<Add library="wxscintilla" />
+			<Add library="wxmsw30u_propgrid" />
+			<Add library="wxmsw30u_media" />
+			<Add library="wxmsw30u_adv" />
+			<Add library="wxmsw30u_gl" />
+			<Add library="wxmsw30u_html" />
+			<Add library="wxexpat" />
+			<Add library="wxbase30u_xml" />
+			<Add library="wxbase30u_net" />
+			<Add library="wxmsw30u_aui" />
+			<Add library="wxmsw30u_core" />
+			<Add library="wxbase30u" />
+			<Add library="wxregexu" />
+			<Add library="wxjpeg" />
+			<Add library="wxpng" />
+			<Add library="wxtiff" />
+			<Add library="wxzlib" />
+			<Add library="rpcrt4" />
+			<Add library="winmm" />
+			<Add library="advapi32" />
+			<Add library="version" />
+			<Add library="wsock32" />
+			<Add library="comctl32" />
+			<Add library="ole32" />
+			<Add library="uuid" />
+			<Add library="winspool" />
+			<Add library="oleaut32" />
+			<Add directory="$(wx)/lib/gcc_lib" />
 		</Linker>
 		<Unit filename="NumeRe.rc">
 			<Option compilerVar="WINDRES" />
