--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -110,6 +110,23 @@
 					<Add option="-DDO_LOG" />
 				</Compiler>
 			</Target>
+			<Target title="Dr Memory_x64">
+				<Option output="../../Software/NumeRe/numere" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Deepdebug_x64" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Option host_application="D:/Software/DrMemory-Windows-2.6.0/bin64/drmemory.exe -light -count_leaks -no_check_gdi --" />
+				<Option run_host_application_in_terminal="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-ggdb3" />
+					<Add option="-fno-omit-frame-pointer" />
+					<Add option="-D__GNUWIN64__" />
+					<Add option="-DNR_HAVE_GSL2" />
+					<Add option="-DWXDEBUG" />
+					<Add option="-DDO_LOG" />
+				</Compiler>
+			</Target>
 			<Environment>
 				<Variable name="wx" value="$(TARGET_COMPILER_DIR)wxWidgets-3.0.2" />
 			</Environment>
@@ -519,6 +536,7 @@
 			<Option target="Deep Debug" />
 			<Option target="Profiling_x64" />
 			<Option target="Deep Debug_x64" />
+			<Option target="Dr Memory_x64" />
 		</Unit>
 		<Unit filename="kernel/core/utils/tools.cpp" />
 		<Unit filename="kernel/core/utils/tools.hpp" />
