--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "externals/date"]
 	path = externals/date
 	url = https://github.com/HowardHinnant/date.git
+[submodule "externals/QR-Code-generator"]
+	path = externals/QR-Code-generator
+	url = https://github.com/nayuki/QR-Code-generator.git
