--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -474,6 +474,8 @@
 		<Unit filename="kernel/core/maths/statslogic.hpp" />
 		<Unit filename="kernel/core/maths/student_t.cpp" />
 		<Unit filename="kernel/core/maths/student_t.hpp" />
+		<Unit filename="kernel/core/maths/units.cpp" />
+		<Unit filename="kernel/core/maths/units.hpp" />
 		<Unit filename="kernel/core/maths/wavelet.cpp" />
 		<Unit filename="kernel/core/maths/wavelet.hpp" />
 		<Unit filename="kernel/core/plotting/graph_helper.cpp" />
