--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "externals/QR-Code-generator"]
 	path = externals/QR-Code-generator
 	url = https://github.com/nayuki/QR-Code-generator.git
+[submodule "externals/stduuid"]
+	path = externals/stduuid
+	url = https://github.com/mariusbancila/stduuid.git
