--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -134,7 +134,8 @@
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
-					<Add option="-O3" />
+					<Add option="-Og" />
+					<Add option="-g" />
 					<Add option="-fopenmp" />
 					<Add option="-D__GNUWIN64__" />
 					<Add option="-DNR_HAVE_GSL2" />
