Enhanced the usage of StringView Combined variable management into central VarFactory Made the parser copyable by referencing the VarFactory via a std::shared_ptr

--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -1818,6 +1818,8 @@
 		<Unit filename="kernel/core/ParserLib/muParserTokenReader.h" />
 		<Unit filename="kernel/core/ParserLib/muStructures.cpp" />
 		<Unit filename="kernel/core/ParserLib/muStructures.hpp" />
+		<Unit filename="kernel/core/ParserLib/muVarFactory.cpp" />
+		<Unit filename="kernel/core/ParserLib/muVarFactory.hpp" />
 		<Unit filename="kernel/core/ParserLib/parserstandalone.cpp">
 			<Option target="ParserLib_x64" />
 		</Unit>
