--- a/NumeRe.cbp
+++ b/NumeRe.cbp
@@ -3362,6 +3362,17 @@
 			<Option target="Dr Memory_x64" />
 			<Option target="Debug_x64" />
 		</Unit>
+		<Unit filename="kernel/core/procedure/mangler.hpp">
+			<Option target="Debug" />
+			<Option target="Release" />
+			<Option target="Profiling" />
+			<Option target="Deep Debug" />
+			<Option target="Profiling_x64" />
+			<Option target="Release_x64" />
+			<Option target="Deep Debug_x64" />
+			<Option target="Dr Memory_x64" />
+			<Option target="Debug_x64" />
+		</Unit>
 		<Unit filename="kernel/core/procedure/plugin.cpp">
 			<Option target="Debug" />
 			<Option target="Release" />
